gen/com/predicate_proof/grammar/predicate_proof_grammarParser.java
// Generated from C:/Users/admin/Documents/Studium/Master/Forschungsprojekt/predicate_proof/src/main/java/com/predicate_proof/grammar\predicate_proof_grammar.g4 by ANTLR 4.9.1
package com.predicate_proof.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class predicate_proof_grammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, FORMULAEND=13, VARIABLEEND=14, BLOCKBEGIN=15, 
		BLOCKEND=16, ASSUMPTION=17, PREMISE=18, BOTTOM=19, NOT=20, EXISTQUANTOR=21, 
		ALLQUANTOR=22, AND=23, OR=24, TRANSFORMATION_ARROW=25, EUQIVALENZ_ARROW=26, 
		EQ=27, LPAREN=28, RPAREN=29, COMMA=30, EOL=31, DIGIT=32, CHAR=33, WS=34;
	public static final int
		RULE_predicateProof = 0, RULE_block = 1, RULE_lineWithVariableSymbol = 2, 
		RULE_line = 3, RULE_logicFormula = 4, RULE_implicationExpression = 5, 
		RULE_orAndExpression = 6, RULE_unaryExpression = 7, RULE_unaryOperator = 8, 
		RULE_predicateOrFunction = 9, RULE_parameter = 10, RULE_description = 11, 
		RULE_andIntroduction = 12, RULE_andElimination1 = 13, RULE_andElimination2 = 14, 
		RULE_orIntroduction1 = 15, RULE_orIntroduction2 = 16, RULE_orElimination = 17, 
		RULE_impliesIntroduction = 18, RULE_impliesElimination = 19, RULE_notIntroduction = 20, 
		RULE_notElimination = 21, RULE_bottomElimination = 22, RULE_doubleNotIntroduction = 23, 
		RULE_doubleNotElimination = 24, RULE_modusTollens = 25, RULE_pbc = 26, 
		RULE_excludedMiddle = 27, RULE_allquantorIntroduction = 28, RULE_allquantorElimination = 29, 
		RULE_existsquantorIntroduction = 30, RULE_existsquantorElimination = 31, 
		RULE_copyRule = 32, RULE_alreadyProofed = 33, RULE_equalsIntroduction = 34, 
		RULE_equalsElimination = 35, RULE_variable = 36, RULE_singleScope = 37, 
		RULE_multiScope = 38, RULE_lineNumber = 39, RULE_integer = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"predicateProof", "block", "lineWithVariableSymbol", "line", "logicFormula", 
			"implicationExpression", "orAndExpression", "unaryExpression", "unaryOperator", 
			"predicateOrFunction", "parameter", "description", "andIntroduction", 
			"andElimination1", "andElimination2", "orIntroduction1", "orIntroduction2", 
			"orElimination", "impliesIntroduction", "impliesElimination", "notIntroduction", 
			"notElimination", "bottomElimination", "doubleNotIntroduction", "doubleNotElimination", 
			"modusTollens", "pbc", "excludedMiddle", "allquantorIntroduction", "allquantorElimination", 
			"existsquantorIntroduction", "existsquantorElimination", "copyRule", 
			"alreadyProofed", "equalsIntroduction", "equalsElimination", "variable", 
			"singleScope", "multiScope", "lineNumber", "integer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'i'", "'e1'", "'e2'", "'i1'", "'i2'", "'e'", "'MT'", "'PBC'", 
			"'LEM'", "'copy'", "'already proofed'", "'-'", null, null, "'\\ll'", 
			"'\\gg'", null, null, "'\\bot'", "'\\neg'", "'\\exists'", "'\\forall'", 
			"'\\wedge'", "'\\vee'", null, "'\\leftrightarrow'", "'='", null, null, 
			"','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "FORMULAEND", "VARIABLEEND", "BLOCKBEGIN", "BLOCKEND", "ASSUMPTION", 
			"PREMISE", "BOTTOM", "NOT", "EXISTQUANTOR", "ALLQUANTOR", "AND", "OR", 
			"TRANSFORMATION_ARROW", "EUQIVALENZ_ARROW", "EQ", "LPAREN", "RPAREN", 
			"COMMA", "EOL", "DIGIT", "CHAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "predicate_proof_grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public predicate_proof_grammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PredicateProofContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public PredicateProofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicateProof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterPredicateProof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitPredicateProof(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitPredicateProof(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateProofContext predicateProof() throws RecognitionException {
		PredicateProofContext _localctx = new PredicateProofContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_predicateProof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BLOCKBEGIN() { return getToken(predicate_proof_grammarParser.BLOCKBEGIN, 0); }
		public TerminalNode BLOCKEND() { return getToken(predicate_proof_grammarParser.BLOCKEND, 0); }
		public LineWithVariableSymbolContext lineWithVariableSymbol() {
			return getRuleContext(LineWithVariableSymbolContext.class,0);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(BLOCKBEGIN);
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(85);
				lineWithVariableSymbol();
				}
				break;
			}
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DIGIT:
					{
					setState(88);
					line();
					}
					break;
				case BLOCKBEGIN:
					{
					setState(89);
					block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==BLOCKBEGIN || _la==DIGIT );
			setState(94);
			match(BLOCKEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineWithVariableSymbolContext extends ParserRuleContext {
		public LineNumberContext lineNumber() {
			return getRuleContext(LineNumberContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode VARIABLEEND() { return getToken(predicate_proof_grammarParser.VARIABLEEND, 0); }
		public TerminalNode EOL() { return getToken(predicate_proof_grammarParser.EOL, 0); }
		public LogicFormulaContext logicFormula() {
			return getRuleContext(LogicFormulaContext.class,0);
		}
		public TerminalNode FORMULAEND() { return getToken(predicate_proof_grammarParser.FORMULAEND, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public LineWithVariableSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineWithVariableSymbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterLineWithVariableSymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitLineWithVariableSymbol(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitLineWithVariableSymbol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineWithVariableSymbolContext lineWithVariableSymbol() throws RecognitionException {
		LineWithVariableSymbolContext _localctx = new LineWithVariableSymbolContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lineWithVariableSymbol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			lineNumber();
			setState(97);
			variable();
			setState(98);
			match(VARIABLEEND);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOTTOM) | (1L << NOT) | (1L << EXISTQUANTOR) | (1L << ALLQUANTOR) | (1L << LPAREN) | (1L << CHAR))) != 0)) {
				{
				setState(99);
				logicFormula(0);
				setState(100);
				match(FORMULAEND);
				setState(101);
				description();
				}
			}

			setState(105);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineNumberContext lineNumber() {
			return getRuleContext(LineNumberContext.class,0);
		}
		public LogicFormulaContext logicFormula() {
			return getRuleContext(LogicFormulaContext.class,0);
		}
		public TerminalNode FORMULAEND() { return getToken(predicate_proof_grammarParser.FORMULAEND, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(predicate_proof_grammarParser.EOL, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			lineNumber();
			setState(108);
			logicFormula(0);
			setState(109);
			match(FORMULAEND);
			setState(110);
			description();
			setState(111);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicFormulaContext extends ParserRuleContext {
		public ImplicationExpressionContext implicationExpression() {
			return getRuleContext(ImplicationExpressionContext.class,0);
		}
		public LogicFormulaContext logicFormula() {
			return getRuleContext(LogicFormulaContext.class,0);
		}
		public TerminalNode EUQIVALENZ_ARROW() { return getToken(predicate_proof_grammarParser.EUQIVALENZ_ARROW, 0); }
		public LogicFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterLogicFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitLogicFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitLogicFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicFormulaContext logicFormula() throws RecognitionException {
		return logicFormula(0);
	}

	private LogicFormulaContext logicFormula(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicFormulaContext _localctx = new LogicFormulaContext(_ctx, _parentState);
		LogicFormulaContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_logicFormula, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(114);
			implicationExpression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LogicFormulaContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_logicFormula);
					setState(116);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(117);
					match(EUQIVALENZ_ARROW);
					setState(118);
					implicationExpression(0);
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ImplicationExpressionContext extends ParserRuleContext {
		public OrAndExpressionContext orAndExpression() {
			return getRuleContext(OrAndExpressionContext.class,0);
		}
		public ImplicationExpressionContext implicationExpression() {
			return getRuleContext(ImplicationExpressionContext.class,0);
		}
		public TerminalNode TRANSFORMATION_ARROW() { return getToken(predicate_proof_grammarParser.TRANSFORMATION_ARROW, 0); }
		public ImplicationExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implicationExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterImplicationExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitImplicationExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitImplicationExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplicationExpressionContext implicationExpression() throws RecognitionException {
		return implicationExpression(0);
	}

	private ImplicationExpressionContext implicationExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ImplicationExpressionContext _localctx = new ImplicationExpressionContext(_ctx, _parentState);
		ImplicationExpressionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_implicationExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125);
			orAndExpression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ImplicationExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_implicationExpression);
					setState(127);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(128);
					match(TRANSFORMATION_ARROW);
					setState(129);
					orAndExpression(0);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OrAndExpressionContext extends ParserRuleContext {
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public OrAndExpressionContext orAndExpression() {
			return getRuleContext(OrAndExpressionContext.class,0);
		}
		public TerminalNode OR() { return getToken(predicate_proof_grammarParser.OR, 0); }
		public TerminalNode AND() { return getToken(predicate_proof_grammarParser.AND, 0); }
		public OrAndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orAndExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterOrAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitOrAndExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitOrAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrAndExpressionContext orAndExpression() throws RecognitionException {
		return orAndExpression(0);
	}

	private OrAndExpressionContext orAndExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OrAndExpressionContext _localctx = new OrAndExpressionContext(_ctx, _parentState);
		OrAndExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_orAndExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			unaryExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(144);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new OrAndExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_orAndExpression);
						setState(138);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(139);
						match(OR);
						setState(140);
						unaryExpression();
						}
						break;
					case 2:
						{
						_localctx = new OrAndExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_orAndExpression);
						setState(141);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(142);
						match(AND);
						setState(143);
						unaryExpression();
						}
						break;
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class UnaryExpressionContext extends ParserRuleContext {
		public UnaryOperatorContext unaryOperator() {
			return getRuleContext(UnaryOperatorContext.class,0);
		}
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(predicate_proof_grammarParser.LPAREN, 0); }
		public LogicFormulaContext logicFormula() {
			return getRuleContext(LogicFormulaContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(predicate_proof_grammarParser.RPAREN, 0); }
		public PredicateOrFunctionContext predicateOrFunction() {
			return getRuleContext(PredicateOrFunctionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode BOTTOM() { return getToken(predicate_proof_grammarParser.BOTTOM, 0); }
		public UnaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterUnaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitUnaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitUnaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryExpressionContext unaryExpression() throws RecognitionException {
		UnaryExpressionContext _localctx = new UnaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unaryExpression);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				unaryOperator();
				setState(150);
				unaryExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				match(LPAREN);
				setState(153);
				logicFormula(0);
				setState(154);
				match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				predicateOrFunction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(157);
				variable();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				match(BOTTOM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryOperatorContext extends ParserRuleContext {
		public TerminalNode ALLQUANTOR() { return getToken(predicate_proof_grammarParser.ALLQUANTOR, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode EXISTQUANTOR() { return getToken(predicate_proof_grammarParser.EXISTQUANTOR, 0); }
		public TerminalNode NOT() { return getToken(predicate_proof_grammarParser.NOT, 0); }
		public UnaryOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).enterUnaryOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof predicate_proof_grammarListener ) ((predicate_proof_grammarListener)listener).exitUnaryOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof predicate_proof_grammarVisitor ) return ((predicate_proof_grammarVisitor<? extends T>)visitor).visitUnaryOperator(this);
			else return visitor.visitChildren(this);
		}
	}
